# web-server

Server 1.0/files/: config.json
Server 1.0/files/pages/login/: FUCK.html  main.html
Server 1.0/src/: 123.cpp  CMakeLists.txt  constructor.cpp  coroutine_source.cpp  example  log_stream.cpp  main.cpp  response.cpp  ssl.cpp
Server 2.0/files/: config.json  server.crt  server.key
Server 2.0/files/apis/monitor/: config.json
Server 2.0/files/apis/pyhello/: config.json  Представление объекта
Server 2.0/files/apis/test/: config.json  out
Server 2.0/files/apis/testcs/: config.json
Server 2.0/files/modules/cli/: config.json
Server 2.0/files/modules/gRPC_local_server/: config.json
Server 2.0/files/pages/: main.html  main.js  parser.js  path.json
Server 2.0/files/pages/dbapi/: style.css
Server 2.0/files/pages/login/: main1.html  script.js
Server 2.0/src/: CMakeLists.txt  README.md  globals.h  include.h  log_stream.cpp  main.cpp  modules.cpp  response.cpp  sql.cpp  ssl.cpp  usings.h  variables.h
Server 2.0/src/include/: collector.cpp  collector.h  include.h  log_stream.cpp  log_stream.h  modules.h  response.cpp  response.h  sql.cpp  sql.h  ssl.cpp  ssl.h  variables.h
Server 2.0/src/module example/example/: CMakeLists.txt  library.cpp  library.h  packages.md
Server 2.0/src/module example/example/scripts/: collector.cpp  response.cpp  sql.cpp  variables.h
Server 2.0/src/src/: add.cpp  main.cpp
Server 3.0/files/: access.json  config.json
Server 3.0/files/apis/pyhello/: main.py
Server 3.0/files/apis/test/: file.html
Server 3.0/files/apis/tools/: config.json
Server 3.0/files/pages/: dump_save.sql  main.css  main.html  parser.js
Server 3.0/files/pages/123/: test.js
Server 3.0/files/pages/cookie/: main.html  test.js
Server 3.0/files/pages/cookie_write/: input.php  main.html
Server 3.0/files/pages/dbapi/: main.html  parser.js
Server 3.0/files/pages/lab1/file/: filetxt  input.php  main.html  test.html
Server 3.0/files/pages/login/: request.js  script.js  style.css
Server 3.0/files/pages/tools/: style.css
Server 3.0/src/: CMakeLists.txt  main.cpp
Server 3.0/src/include/: global.hpp  include.hpp  usings.hpp  usings.md  variables.hpp  web-server.hpp  web-server_broken.hpp
Server 3.0/src/include/modules/: collector.hpp  log_stream.hpp  modules.hpp  response.hpp  sql.hpp  ssl.hpp
Server 3.0/src/module example/src/: CMakeLists.txt  library.cpp  library.h  packages.md
Server 3.0/src/module example/src/scripts/: log_stream.cpp  log_stream.h  response.h  sql.cpp  sql.h  ssl.cpp  ssl.h  variables.h
Server 3.0/src/src/: add.cpp  main_old.cpp
Server 3.0/src/src/modules/: collector.cpp  log_stream.cpp  sql.cpp  ssl.cpp
Server 4.0/: install.sh
Server 4.0/docs/: README.md  config.md  install.md
Server 4.0/files/: Server4_0  config.json
Server 4.0/files/apis/hello/: config.json
Server 4.0/files/apis/tools/: config.json
Server 4.0/files/pages/: access.js  file.js  main.css  main.html  parser.js  path.json  status.js
Server 4.0/files/pages/cookie_write/: script.js
Server 4.0/files/pages/lab1/: main.html
Server 4.0/files/pages/lab1/cookie/: main.html  script.js
Server 4.0/files/pages/lab1/file/: filetxt  input.php  main.html  script.js  test.html
Server 4.0/files/pages/lab2/: main.html
Server 4.0/files/pages/lab2/db/: db.js  db.php  main.css  main.html
Server 4.0/files/pages/login/: access.json  code.php  login.php  login_methods.php  login_save.php  main.html  request.js  rules.json  style.css
Server 4.0/files/pages/tools/: main.html  parser.js
Server 4.0/files/pages/tools_api_test/: main.html
Server 4.0/files/pages/user_db/: main.css  main.html  req.html  script.js  user_db.php
Server 4.0/src/: CMakeLists.txt  main.cpp
Server 4.0/src/include/: Content.hpp  config.hpp  include.hpp  web-server.hpp
Server 4.0/src/include/module/: application.hpp  custom_code.hpp  logger.hpp  psql.hpp  restAPI.hpp  session.hpp
Server 4.0/src/src/: methods.hpp
Server 4.0/src/src/kernel/: main.hpp  socket.hpp
Server 4.0/src/src/modules/: log_stream.cpp
